--- a/scss/contact/_contact.scss
+++ b/scss/contact/_contact.scss
@@ -15,7 +15,7 @@
 
         input[type=text], textarea {
             display: block;
-            width: 450px;
+            width: 100%;
             border: 1px solid #ccc; 
             resize: vertical;
             padding: 15px;
