--- a/css/main.css
+++ b/css/main.css
@@ -59,14 +59,14 @@
 .wrapper .header-wrapper .scroll-wrapper a .fa-arrow-down {
   margin: auto;
   color: white;
-  font-size: 2rem;
+  font-size: 3rem;
 }
 
 /* line 54, ../../../netMatters/Portfolio/scss/header/_header.scss */
 .wrapper .header-wrapper .scroll-wrapper a p {
   margin: auto;
   color: white;
-  font-size: 1rem;
+  font-size: 2rem;
 }
 
 @media screen and (min-width: 768px) {
@@ -88,7 +88,7 @@
   display: grid;
   background-image: url(../img/header-top.jpg);
   background-size: cover;
-  height: 200px;
+  height: 300px;
   justify-content: center;
 }
 
@@ -99,7 +99,7 @@
   background-color: rgba(255, 255, 255, 0.8);
   width: 350px;
   margin: auto;
-  margin-left: 30px;
+  margin-top: 100px;
   text-align: center;
   vertical-align: middle;
 }
@@ -108,13 +108,6 @@
 .about-wrapper .header-about-wrapper .header-about-title h1 {
   margin: auto;
   vertical-align: middle;
-}
-
-@media screen and (min-width: 768px) {
-  /* line 32, ../../../netMatters/Portfolio/scss/header/_header-page.scss */
-  .about-wrapper .header-about-wrapper .header-about-title {
-    margin-left: auto;
-  }
 }
 
 /* line 3, ../../../netMatters/Portfolio/scss/side_nav/_side_nav.scss */
@@ -126,8 +119,8 @@
 .wrapper .hamburger, .about-wrapper .hamburger {
   position: absolute;
   z-index: 2;
-  top: 0px;
-  left: 0px;
+  top: 20px;
+  left: 20px;
 }
 
 /* line 10, ../../../netMatters/Portfolio/scss/side_nav/_side_nav.scss */
@@ -461,9 +454,10 @@
 .contact-wrapper form {
   display: inline-block;
   margin: auto;
+  width: 90%;
 }
 
-/* line 16, ../../../netMatters/Portfolio/scss/contact/_contact.scss */
+/* line 17, ../../../netMatters/Portfolio/scss/contact/_contact.scss */
 .contact-wrapper form input[type=text], .contact-wrapper form textarea {
   display: block;
   width: 100%;
@@ -473,7 +467,7 @@
   font-size: 1.1rem;
 }
 
-/* line 26, ../../../netMatters/Portfolio/scss/contact/_contact.scss */
+/* line 27, ../../../netMatters/Portfolio/scss/contact/_contact.scss */
 .contact-wrapper form input[type=submit] {
   display: block;
   margin-top: 20px;
@@ -484,20 +478,35 @@
   font-size: 1.2rem;
 }
 
-/* line 36, ../../../netMatters/Portfolio/scss/contact/_contact.scss */
+/* line 37, ../../../netMatters/Portfolio/scss/contact/_contact.scss */
 .contact-wrapper form input[type=submit]:hover {
   background-color: #555;
   cursor: pointer;
 }
 
-/* line 41, ../../../netMatters/Portfolio/scss/contact/_contact.scss */
+/* line 42, ../../../netMatters/Portfolio/scss/contact/_contact.scss */
 .contact-wrapper form label {
   display: block;
   text-align: left;
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 768px) {
   /* line 51, ../../../netMatters/Portfolio/scss/contact/_contact.scss */
+  .contact-wrapper form {
+    width: 400px;
+  }
+  /* line 53, ../../../netMatters/Portfolio/scss/contact/_contact.scss */
+  .contact-wrapper form input[type=text], .contact-wrapper form textarea {
+    width: 400px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  /* line 62, ../../../netMatters/Portfolio/scss/contact/_contact.scss */
+  .contact-wrapper form {
+    width: 600px;
+  }
+  /* line 64, ../../../netMatters/Portfolio/scss/contact/_contact.scss */
   .contact-wrapper form input[type=text], .contact-wrapper form textarea {
     width: 600px;
   }
@@ -532,15 +541,26 @@
   text-align: left;
 }
 
+/* line 26, ../../../netMatters/Portfolio/scss/scs/_scs.scss */
+.main-wrapper .portrait {
+  margin: auto;
+}
+
+/* line 28, ../../../netMatters/Portfolio/scss/scs/_scs.scss */
+.main-wrapper .portrait img {
+  width: 200px;
+  border-radius: 50%;
+}
+
 @media screen and (min-width: 500px) {
-  /* line 28, ../../../netMatters/Portfolio/scss/scs/_scs.scss */
+  /* line 36, ../../../netMatters/Portfolio/scss/scs/_scs.scss */
   .main-wrapper {
     margin: 30px auto;
   }
 }
 
 @media screen and (min-width: 1200px) {
-  /* line 34, ../../../netMatters/Portfolio/scss/scs/_scs.scss */
+  /* line 42, ../../../netMatters/Portfolio/scss/scs/_scs.scss */
   .main-wrapper {
     width: 700px;
   }
