--- a/scss/scs/_scs.scss
+++ b/scss/scs/_scs.scss
@@ -22,6 +22,14 @@
     .about-nm {
         text-align: left;
     }
+
+    .portrait {
+        margin: auto;
+        img {
+            width: 200px;
+            border-radius: 50%;
+        }
+    }
 }
 
 @media screen and (min-width: 500px) {
