--- a/scss/projects/_projects.scss
+++ b/scss/projects/_projects.scss
@@ -27,6 +27,7 @@
             img {
                 width: 100%;
                 object-fit: cover;
+                border: 1px solid black;
             }
 
             .project-link {
@@ -57,6 +58,7 @@
             img {
                 width: 100%;
                 object-fit: cover;
+                border: 1px solid black;
             }
 
             .project-link {
@@ -87,6 +89,7 @@
             img {
                 width: 100%;
                 object-fit: cover;
+                border: 1px solid black;
             }
 
             .project-link {
@@ -117,6 +120,7 @@
             img {
                 width: 100%;
                 object-fit: cover;
+                border: 1px solid black;
             }
 
             .project-link {
