--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,7 +5,8 @@
 @import 'projects/index.scss';
 @import 'contact/_index.scss';
 @import 'scs/index';
-@import 'code/code';
+@import 'code/index';
+@import 'typed/index';
 
 * {
     box-sizing: border-box;
