--- a/scss/side_nav/_side_nav.scss
+++ b/scss/side_nav/_side_nav.scss
@@ -3,10 +3,11 @@
 .wrapper, .about-wrapper {
     position: relative;
     .hamburger {
-        position: absolute;
-        z-index: 2;
+        position: fixed;
+        z-index: 5;
         top: 20px;
         left: 20px;
+        cursor: pointer;
         .fa-bars {
             font-size: 3rem;
             background-color: rgba(#fff, 0.8);
@@ -22,7 +23,7 @@
     height: 100%;
     width: 150px;
     position: fixed;
-    z-index: 1;
+    z-index: 8;
     top: 0;
     left: 0;
     background-color: #fff;
@@ -31,6 +32,7 @@
     .initial-wrapper {
         display: block;
         justify-content: center;
+        position: relative;
         
         a {
             text-decoration: none;
@@ -42,8 +44,16 @@
                 font-weight: 600;
                 margin: 30px auto;
             }
-        }
+        }   
         
+        .closebtn {
+            position: absolute;
+            top: -40px;
+            right: 10px;
+            text-decoration: none;
+            color: black;
+            font-size: 3rem;
+        }
     }
 
     .links-wrapper {
@@ -109,11 +119,16 @@
 
     .wrapper, .about-wrapper {
         .hamburger {
-            display: none;
+            display: block;
         }
     }
 
     .nav-wrapper { 
         display: block;
+        .initial-wrapper {
+            .closebtn {
+                display: block;
+            }
+        }
     }
 }
